# petsshop

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/actions/: health.rs  mod.rs
crates/api/src/actions/cards/: cards.rs
crates/api/src/actions/categories/: categories.rs
crates/api/src/actions/comments/: comments.rs
crates/api/src/actions/order_items/: mod.rs  order_items.rs
crates/api/src/actions/orders/: orders.rs
crates/api/src/actions/payments/: payments.rs
crates/api/src/actions/products/: products.rs
crates/api/src/actions/users/: users.rs
crates/api/src/common/: card.rs  category.rs  comment.rs  mod.rs  order.rs  order_item.rs  payment.rs  product.rs  user.rs
crates/db_queries/: Cargo.toml
crates/db_queries/src/: lib.rs  user.rs
crates/db_queries/src/models/: mod.rs
crates/db_queries/src/models/cards/: cards.rs
crates/db_queries/src/models/categories/: categories.rs
crates/db_queries/src/models/comments/: comments.rs
crates/db_queries/src/models/order_items/: order_items.rs
crates/db_queries/src/models/orders/: orders.rs
crates/db_queries/src/models/payments/: payments.rs
crates/db_queries/src/models/products/: products.rs
crates/db_queries/src/models/users/: users.rs
crates/db_schema/: Cargo.toml
crates/db_schema/src/: lib.rs  schema.rs
crates/db_schema/src/models/: cards.rs  categories.rs  comments.rs  errors.rs  mod.rs  order_items.rs  orders.rs  payments.rs  products.rs  users.rs
crates/db_views/: Cargo.toml
crates/db_views/src/: lib.rs  user.rs
crates/db_views/src/cards/: cards_view.rs  mod.rs
crates/db_views/src/categories/: categories_view.rs  mod.rs
crates/db_views/src/comments/: comments_view.rs  mod.rs
crates/db_views/src/order_items/: mod.rs  order_items_view.rs
crates/db_views/src/orders/: mod.rs  orders_view.rs
crates/db_views/src/payments/: mod.rs  payments_view.rs
crates/db_views/src/products/: mod.rs  products_view.rs
crates/db_views/src/users/: users_view.rs
crates/utils/: Cargo.toml
crates/utils/src/: claims.rs  collection.rs  email.rs  lib.rs  request.rs  token.rs  utils.rs  verify.rs  version.rs
crates/utils/src/rate_limit/: mod.rs  rate_limiter.rs
crates/utils/src/settings/: defaults.rs  mod.rs  structs.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-03-15-000000_petsshop/: down.sql  up.sql
migrations/2023-03-15-000010_petsshop_aggregations/: down.sql  up.sql
src/: api_routes.rs  lib.rs  main.rs
