[package]
name = "petsshop_api"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[profile.dev]
debug = 0

[workspace]
members = [
    "crates/utils",
    "crates/db_schema",
    "crates/db_queries",
#    "crates/db_views",
    "crates/api"
]

[dependencies]
futures-util = "0.3.21"
utils = { path = "./crates/utils" }
db_schema = { path = "./crates/db_schema" }
db_queries = { path = "./crates/db_queries" }
#db_views = { path = "./crates/db_views" }
api = { path = "./crates/api" }
diesel = "1.4.5"
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
actix = "0.10.0"
actix-web = { version = "4.0.1", features = ["openssl"]  }
actix-cors = { version = "0.6.1"}
actix-rt = { version = "2.6.0", default-features = false }
actix-session = "0.5.0"
log = "0.4.14"
env_logger = "0.8.2"
strum = "0.20.0"
url = { version = "2.2.1", features = ["serde"] }
openssl = "0.10.35"
http = "0.2.3"
http-signature-normalization-actix = { version = "0.4.1", default-features = false, features = ["sha-2"] }
http-signature-normalization-reqwest = { version = "0.1.3", default-features = false, features = ["sha-2"] }
tokio = "1.8.4"
anyhow = "1.0.38"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
clokwerk = "0.3.4"
background-jobs = "0.8.0"
sha2 = "0.9.3"
lazy_static = "1.4.0"
base64 = "0.13.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]