[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
db_schema = { path = "../db_schema" }
db_queries = { path = "../db_queries" }
db_views = { path = "../db_views" }
diesel = "1.4.5"
bcrypt = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
serde = { version = "1.0.144", features = ["derive"] }
actix = "0.10.0"
actix-session = "0.5.0"
actix-web = { version = "4.0.1", features = ["openssl"]  }
actix-rt = { version = "2.6.0", default-features = true }
actix-http = "3.0.4"
awc = { version = "2.0.3", default-features = false }
log = "0.4.14"
rand = "0.8.3"
strum = "0.20.0"
strum_macros = "0.20.1"
lazy_static = "1.4.0"
url = { version = "2.2.1", features = ["serde"] }
openssl = "0.10.32"
http = "0.2.3"
http-signature-normalization-actix = { version = "0.4.1", default-features = false, features = ["sha-2"] }
base64 = "0.13.0"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.12"
itertools = "0.10.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
sha2 = "0.9.3"
async-trait = "0.1.42"
captcha = "0.0.8"
anyhow = "1.0.65"
thiserror = "1.0.23"
background-jobs = "0.8.0"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
errors-lib-rs = { git = 'https://github.com/aircampi/errors-lib-rs' }


#
oauth2 = {version = "4.1.0"}
indexmap = "~1.6.2"
# actix-web = "3.3.3" this future worked on oauth2