[package]
name = "db_views"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
db_queries = { path = "../db_queries" }
db_schema = { path = "../db_schema" }
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2","serde_json"] }
serde = { version = "1.0.123", features = ["derive"] }
log = "0.4.14"
url = "2.2.1"
actix-web = "4.0.1"
serde_json = "1.0.2"
chrono = "0.4.1"
diesel-derive-newtype = "0.1"
futures = "0.3.21"
errors-lib-rs = { git = 'https://github.com/aircampi/errors-lib-rs' }

[dev-dependencies]
serial_test = "0.5.1"