[package]
name = "utils"
version = "0.1.0"
edition = "2018"

[lib]
name = "utils"
path = "src/lib.rs"
doctest = false

[dependencies]
futures-util = "0.3.21"
regex = "1.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
lettre = "0.10.0-alpha.5"
log = "0.4.14"
itertools = "0.10.0"
rand = "0.8.3"
percent-encoding = "2.1.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
thiserror = "1.0.23"
comrak = { version = "0.10.1", default-features = false }
lazy_static = "1.4.0"
openssl = "0.10.32"
url = { version = "2.2.1", features = ["serde"] }
actix-web = { version = "4.0.1", features = ["openssl"]  }
actix-rt = { version = "2.6.0", default-features = false }
anyhow = "1.0.38"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
tokio = { version = "1.8.4", features = ["sync"] }
strum = "0.20.0"
strum_macros = "0.20.1"
futures = "0.3.12"
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2","serde_json"] }
http = "0.2.3"
jsonwebtoken = "7.2.0"
deser-hjson = "0.1.12"
merge = "0.1.0"
envy = "0.4.2"
time = "0.3.7"
